@@ -1,4 +1,4 @@
-.\" $snafu: gardump.1,v 1.9 2003/06/12 16:44:59 marc Exp $
+.\" $snafu: gardump.1,v 1.10 2003/09/27 05:50:32 marc Exp $
 .\"
 .\" Public Domain, 2001, Marco S Hyman <marc@snafu.org>
 .\"
@@ -95,7 +95,7 @@ gardump -w
 .Ed
 results in the output
 .Bd -literal -offset indent
-[gardump version 1.92]
+[gardump version 1.93]
 [product 155, version 207: GPS 5 Software Version 2.07]
 [waypoints, 3 records]
 # **n [route name]
